2001-03-08  Yuuichi Teranishi  <teranisi@isl.ntt.co.jp>

	* w3m.el (w3m-insert-image): Eliminated needless local variable.
	(w3m-remove-image) [XEmacs]: Remove images at `end' too.
	(w3m-fontify-images): Set `w3m-image-redundant' property
	if "img_alt" string is upper case.
	(w3m-toggle-inline-images): Fixed docstring;
	Insert and remove dummy string if alt string has `w3m-image-redundant'
	property.

2001-03-08  Shun-ichi GOTO  <gotoh@taiyo.co.jp>

	* w3m.el (w3m-fontify): Allow '_' char for element name.

2001-03-08  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-display-inline-image-status): New variable.
	(w3m-image-type-alist): Define as constant.
	(w3m-anchor): Moved position.
	(w3m-image): Ditto.
	(w3m-action): Ditto.
	(w3m-create-image): Added argument `no-cache'.
	(w3m-remove-image): New function.
	(w3m-fontify-images): Don't display inline image here.
	(w3m-toggle-inline-images): New function.
	(w3m-mode-map): Bind 't' to `w3m-toggle-inline-images'.
	(w3m-goto-url): Call `w3m-toggle-inline-images';
	Set `w3m-display-inline-image-status'.
	(w3m-region): Ditto.

2001-03-08  Akihiro Arisawa  <ari@mbf.sphere.ne.jp>

	* mime-w3m.el (mime-w3m-preview-text/html): Use
	`mime-entity-fetch-field' instead of `mime-w3m-get-xref'.
	(mime-w3m-get-xref): Removed.

2001-03-07  Keisuke Nishida  <kxn30@po.cwru.edu>

	* w3m.el (w3m-search-engine-alist): Added "rpmfind".
	(w3m-fontify-anchors): Treat single quotes (') as quotation marks.

2001-03-08  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el: Backlog module is separated from front-end functions and
	code to access the list of arrived URLs is put in order.
	(w3m-arrived-file): Renamed from `w3m-arrived-urls-file'.
	(w3m-arrived-anchor-list): Removed variable.
	(w3m-arrived-list-load, w3m-arrived-list-save,
	w3m-arrived-list-add, w3m-save-position, w3m-restore-position):
	Removed functions.
	(w3m-arrived-db-size): New constant.
	(w3m-arrived-db, w3m-arrived-seq): New variables.